added fonts and colors

--- a/frontend/src/main.global.css
+++ b/frontend/src/main.global.css
@@ -1,33 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://online.vtb.ru/fonts/VTBGroupUI-SemiBold.woff2');
+@import url('https://online.vtb.ru/fonts/VTBGroupUI-Medium.woff2');
+@import url('https://online.vtb.ru/fonts/VTBGroupUI-Regular.woff2');
 
 :root {
-  --primary:         #116ACC;
-  --secondary1:      #182233;
-  --secondary2:      #B3CEE2;
-  --secondary3:      #D9DDE7;
-  --secondary4:      #FD4E5D;
-  --black:           #000000;
-  --grey1:           #1F2937;
-  --grey2:           #374151;
-  --grey3:           #4B5563;
-  --grey4:           #6B7280;
-  --grey5:           #9CA3AF;
-  --grey6:           #D1D5DB;
-  --grey7:           #F3F4F6;
+  --blue:            #4789eb;
   --white:           #ffffff;
-  --info:            #A0C3FF;
-  --success:         #76CA66;
-  --warning:         #E2B93B;
-  --error:           #BA0000;
-  --background:      #E5E5E5;
+  --lightGrey:       #e2e5e9;
+  --grey:            #2b313b;
+  --darkGrey:        #252a32;
+  --lightBlack:      #1a1e23;
+  --black:           #000000;
 }
 
 body {
   margin: 0;
-  font-family: 'Ubuntu', serif;
-  color: var(--black);
-  background-color: var(--white);
 }
 
 * {
