developed basic interface

--- a/frontend/src/main.global.css
+++ b/frontend/src/main.global.css
@@ -6,10 +6,10 @@
   --blue:            #4789eb;
   --white:           #ffffff;
   --lightGrey:       #e2e5e9;
-  --grey:            #2b313b;
-  --darkGrey:        #252a32;
-  --lightBlack:      #1a1e23;
-  --black:           #000000;
+  --grey:            #8a96a8;
+  --darkGrey:        #2b313b;
+  --lightBlack:      #252a32;
+  --black:           #1a1e23;
 }
 
 body {
